[package]
name = "lgtv"
version = "0.3.0"
edition = "2021"
description = "LG WebOS TV Controller"
authors = ["Karl Lattimer <karl@qdh.org.uk>", "Rust port contributors"]
license = "MIT"
repository = "https://github.com/your-username/lgtv-rs"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
mac_address = "1.1"
wake-on-lan = "0.2"
regex = "1.10"
base64 = "0.21"

[lib]
name = "lgtv"
path = "src/lib.rs"

[[bin]]
name = "lgtv"
path = "src/main.rs"
