[package]
name = "lgtv"
version = "0.3.0"
edition = "2021"
description = "LG WebOS TV Controller"
authors = ["Karl Lattimer <karl@qdh.org.uk>", "Rust port contributors"]
license = "MIT"
repository = "https://github.com/your-username/lgtv-rs"

[dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
wake-on-lan = "0.2"
base64 = "0.21"
native-tls = "0.2"
tokio-native-tls = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
name = "lgtv"
path = "src/lib.rs"

[[bin]]
name = "lgtv"
path = "src/main.rs"
